app/src/main/java/com/example/bookclub/errors/AccountEmailNotFoundException.java
package com.example.bookclub.errors;

public class AccountEmailNotFoundException extends RuntimeException {
    public AccountEmailNotFoundException(String email) {
        super("User email not found: " + email);
    }
}
